pres writes current question

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-cookies.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <script src="core.js"></script>
     <script src="app.js"></script>
+
 
 </head>
 
@@ -28,15 +30,7 @@
 	</div>
 
     <script type="text/javascript">
-    var config = {
-        apiKey: "AIzaSyD4a9JV4Jdw95Zfv6IGSbGu0stZKEh9KOU",
-        authDomain: "mistakes-42c6d.firebaseapp.com",
-        databaseURL: "https://mistakes-42c6d.firebaseio.com",
-        projectId: "mistakes-42c6d",
-        storageBucket: "mistakes-42c6d.appspot.com",
-        messagingSenderId: "52859361916"
-    };
-	firebase.initializeApp(config);
+
 
     </script>
 
