moved pres to root and resources

--- a/presentation.html
+++ b/presentation.html
@@ -8,8 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-cookies.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-    <script src="../app.js"></script>
-    <script src="../core.js"></script>
+    <script src="app.js"></script>
+    <script src="core.js"></script>
 
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -29,7 +29,7 @@
   <body>
     <script>
       var slideshow = remark.create({
-        sourceUrl: 'presentation.md',
+        sourceUrl: 'resources/presentation.md',
         ratio: '16:9'
       });
 
