added stats directive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<button ng-click="yes()">Yes</button>
 		<button ng-click="na()">Maybe</button>
 		<button ng-click="no()">No</button>
-		<p>{{vote_stats}}</p>
+        <inline-stats stats=vote_stats></inline-stats>
 	</div>
 
     <script type="text/javascript">
