--- a/presentation.html
+++ b/presentation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
   <head>
     <title>Title</title>
     <meta charset="utf-8">
@@ -26,7 +26,10 @@
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
     
   </head>
-  <body>
+  
+  <body ng-controller="MyCtrl">
+    <div>stats:{{test}}</div>
+    
     <script>
       var slideshow = remark.create({
         sourceUrl: 'resources/presentation.md',
