--- a/presentation.html
+++ b/presentation.html
@@ -5,10 +5,6 @@
     <meta charset="utf-8">
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-database.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-cookies.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-    <script src="app.js"></script>
     <script src="core.js"></script>
     <script
         src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -33,11 +29,6 @@
   </head>
   
   <body ng-controller="MyCtrl">
-    <div id="stats-0">
-        <span class="stats-yes"></span> Yes
-        <span class="stats-na"></span> Maybe
-        <span class="stats-no"></span> No
-    </div>
     
     <script>
       var slideshow = remark.create({
@@ -54,6 +45,8 @@
           }
         }
       })
+
+      auto_update_stats_view()
     </script>
 
   </body>
