--- a/presentation.html
+++ b/presentation.html
@@ -34,7 +34,7 @@
   <body ng-controller="MyCtrl">
     <script>
       var slideshow = remark.create({
-        sourceUrl: 'resources/presentation.md_',
+        sourceUrl: 'resources/presentation.txt',
         ratio: '16:9'
       });
 
